exercise/world-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: world
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - world-gw
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /world
    route:
    - destination:
        host: hello
        port:
          number: 80
